[package]
name = "parrothacker1"
version = "0.1.0"
authors = ["h4ck3r@parrot <rajeevgoutham1@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
log="0.4.14"
postgres="0.19.1"
env_logger="0.4.0"
rustc-serialize="0.3"
